{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 12,
  "lineage": "32a41d91-427c-a76d-c7fe-a689cc2a48ec",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.42.0.0/24",
            "address_prefixes": [
              "10.42.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/virtualNetworks/taco-wagon-app/subnets/web",
            "name": "web",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "943-96367d00-deploy-an-azure-vm-scale-set-with-loa",
            "virtual_network_name": "taco-wagon-app"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/networkSecurityGroups/nsg-taco-wagon-app",
            "location": "eastus",
            "name": "nsg-taco-wagon-app",
            "resource_group_name": "943-96367d00-deploy-an-azure-vm-scale-set-with-loa",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/networkSecurityGroups/nsg-taco-wagon-app/securityRules/http",
            "name": "http",
            "network_security_group_name": "nsg-taco-wagon-app",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "943-96367d00-deploy-an-azure-vm-scale-set-with-loa",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.tacoweb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "azlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb/frontendIPConfigurations/myPublicIP",
                "name": "myPublicIP",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/publicIPAddresses/pranu-publicIP"
              }
            ],
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb",
            "location": "eastus",
            "name": "pranu-lb",
            "resource_group_name": "943-96367d00-deploy-an-azure-vm-scale-set-with-loa",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "module.tacoweb.azurerm_public_ip.azlb",
            "module.tacoweb.data.azurerm_resource_group.azlb",
            "module.tacoweb.data.azurerm_subnet.snet"
          ]
        }
      ]
    },
    {
      "module": "module.tacoweb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "azlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb",
            "name": "BackEndAddressPool"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "module.tacoweb.azurerm_lb.azlb",
            "module.tacoweb.azurerm_public_ip.azlb",
            "module.tacoweb.data.azurerm_resource_group.azlb",
            "module.tacoweb.data.azurerm_subnet.snet"
          ]
        }
      ]
    },
    {
      "module": "module.tacoweb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "azlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb/probes/http",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb",
            "name": "http",
            "number_of_probes": 2,
            "port": 8080,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "module.tacoweb.azurerm_lb.azlb",
            "module.tacoweb.azurerm_public_ip.azlb",
            "module.tacoweb.data.azurerm_resource_group.azlb",
            "module.tacoweb.data.azurerm_subnet.snet"
          ]
        }
      ]
    },
    {
      "module": "module.tacoweb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "azlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb/backendAddressPools/BackEndAddressPool"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb/frontendIPConfigurations/myPublicIP",
            "frontend_ip_configuration_name": "myPublicIP",
            "frontend_port": 80,
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 5,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb",
            "name": "http",
            "probe_id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/loadBalancers/pranu-lb/probes/http",
            "protocol": "Tcp"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "module.tacoweb.azurerm_lb.azlb",
            "module.tacoweb.azurerm_lb_backend_address_pool.azlb",
            "module.tacoweb.azurerm_lb_probe.azlb",
            "module.tacoweb.azurerm_public_ip.azlb",
            "module.tacoweb.data.azurerm_resource_group.azlb",
            "module.tacoweb.data.azurerm_subnet.snet"
          ]
        }
      ]
    },
    {
      "module": "module.tacoweb",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "azlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/2213e8b1-dbc7-4d54-8aff-b5e315df5e5b/resourceGroups/943-96367d00-deploy-an-azure-vm-scale-set-with-loa/providers/Microsoft.Network/publicIPAddresses/pranu-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.169.235.244",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pranu-publicIP",
            "resource_group_name": "943-96367d00-deploy-an-azure-vm-scale-set-with-loa",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "source": "terraform"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.rg",
            "module.tacoweb.data.azurerm_resource_group.azlb"
          ]
        }
      ]
    }
  ]
}